# buoya-news-mcp

./: .env.example  .gitignore  Cargo.toml  README.md  config.default.toml
src/: config.rs  db.rs  domain.rs  error.rs  ingest.rs  main.rs  state.rs
src/core/: config.rs  db.rs  ingest.rs  mod.rs  repository.rs
src/core/fetchers/: binance_futures.rs
src/core/llm/: curator.rs  mod.rs  tools.rs
src/core/types/: mod.rs
src/fetchers/: rss.rs
src/llm/: mod.rs  tools.rs
src/server/: error.rs  mcp.rs  mod.rs  openapi.rs
src/server/routes/: articles.rs  chat.rs  market.rs  mod.rs  sessions.rs  system.rs
src/tui/: app.rs  markdown.rs  mod.rs  ui.rs
src/types/: mod.rs
