[package]
name = "buoya-news-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[lints.rust]
# Downgraded from "forbid" to "deny" so the single, justified sqlite-vec extension
# registration in main.rs can opt out via #[allow(unsafe_code)]. Everything else
# stays unsafe-free.
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.41.0", features = ["chat-completion"] }
chrono = { version = "0.4.45", features = ["serde"] }
fastembed = "5"
# Pinned to match the version sqlx-sqlite 0.9 pulls, so sqlite3_auto_extension
# registers against the same SQLite that sqlx opens connections with.
libsqlite3-sys = "0.37"
crossterm = { version = "0.29", features = ["event-stream"] }
dotenvy = "0.15.7"
feed-rs = "2.3.1"
futures = "0.3.32"
once_cell = "1.21.4"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
    "gzip",
] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlite-vec = "0.1.9"
sqlx = { version = "0.9.0", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4"] }
clap = { version = "4.6.1", features = ["derive"] }
actix-web = "4.13.0"
actix-web-lab = "0.26.0"
tokio-stream = "0.1.18"
rmcp = { version = "1.7.0", features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
utoipa = { version = "5.5.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "vendored"] }
actix-cors = "0.7.1"
# rmcp speaks the `http` 1.x ecosystem; actix-web still speaks `http` 0.2. These let
# the `/mcp` bridge name the 1.x request/response types and stream rmcp's body back
# through actix. `bytes` is already unified across both, so bodies stay zero-copy.
http = "1.4"
http-body-util = "0.1.3"
bytes = "1"

[dev-dependencies]
pretty_assertions = "1.4.1"
